[package]
name = "plotany"
version = "0.1.0"
authors = ["HMPerson1 <hmperson1@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.13.0"

[dependencies]
cairo-rs = "0.1.3"
ndarray = "0.9.1"
lalrpop-util = "0.13.0"
regex = "0.2.1"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_22"]
