[package]
name = "plotany"
version = "0.1.0"
authors = ["HMPerson1 <hmperson1@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
cairo-rs = "0.14.0"
ndarray = "0.15.3"
lalrpop-util = "0.19.6"
regex = "1.5.4"
fnv = "1.0.7"
lazy_static = "1.4.0"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_22"]

[profile.release]
debug = true

[profile.bench]
debug = true
